# OpenShockPY

./: .bandit  .cspell.json  .gitignore  .mega-linter.yml  ADVANCED.md  AGENTS.md  LICENSE.md  README.md  pyproject.toml  pyrightconfig.json  typos.toml
.github/: FUNDING.YML  dependabot.yml
.github/workflows/: mega-linter.yml  python-publish.yml  test.yml  typos.yml
OpenShockPY/: __init__.py  _core.py  async_client.py  cli.py  client.py
tests/: conftest.py  test_async_client.py  test_async_client_http.py  test_client.py  test_client_http.py  test_core.py
